--- a/aplicacion/templates/aplicacion/Registro.html
+++ b/aplicacion/templates/aplicacion/Registro.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h2>Registro de Usuario</h2>
-    <form action="InicioSesion.html" method="POST">
+    <form action="iniciosesion" method="get">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z ]{2,254}">
 
