--- a/aplicacion/templates/aplicacion/Envio.html
+++ b/aplicacion/templates/aplicacion/Envio.html
@@ -60,6 +60,7 @@
                 <textarea id="direccion" name="direccion" required></textarea>
             </div>
             <input type="submit" value="Comprobar Envío" id="comprobarEnvio">
+            <div id="data-url" data-pago-url="{% url 'pago' %}"></div>
         </form>
     </div>
     <script src="{% static 'aplicacion/js/envio.js' %}"></script>
