--- a/aplicacion/static/aplicacion/css/admin.css
+++ b/aplicacion/static/aplicacion/css/admin.css
@@ -44,3 +44,33 @@ h1 {
         padding: 15px;
     }
 }
+.economic-indicators {
+    margin-top: 30px; /* Ajusta el margen superior según sea necesario */
+    text-align: center; /* Centra el contenido */
+}
+
+.economic-indicators h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.economic-indicators .card {
+    display: inline-block;
+    margin: 0 10px; /* Espacio entre cada tarjeta */
+    width: 200px; /* Ancho de cada tarjeta */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.economic-indicators .card .card-header {
+    background-color: #007bff; /* Color de fondo del encabezado */
+    color: #fff; /* Color del texto del encabezado */
+    font-size: 16px;
+    padding: 8px;
+    border-radius: 5px 5px 0 0;
+}
+
+.economic-indicators .card .card-body {
+    font-size: 14px;
+}
