--- a/aplicacion/templates/aplicacion/admin.html
+++ b/aplicacion/templates/aplicacion/admin.html
@@ -50,7 +50,16 @@
             <p>Último acceso: 2024-04-15 09:45 AM</p>
         </div>
     </div>
-
+            <!-- Indicadores Económicos -->
+            <div id="indicators" class="economic-indicators">
+              <h2>Indicadores Económicos</h2>
+              <div id="indicators-content">
+                <!-- Aquí se mostrarán los indicadores económicos -->
+            </div>
+            
+          </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src='{% static "aplicacion/js/querys.js" %}'></script>
 </body>
 </html>
