--- a/aplicacion/templates/aplicacion/factura.html
+++ b/aplicacion/templates/aplicacion/factura.html
@@ -13,10 +13,10 @@
       <div class="container-fluid">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="adUsuarios.html">Usuarios</a>
+            <a class="nav-link active" href="{% url "adUsuarios" %}">Usuarios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="adTienda.html">Tienda</a>
+            <a class="nav-link" href="{% url "adTienda" %}">Tienda</a>
           </li>
           <li class="nav-item">
               <a class="nav-link active" href="{% url "adPedidos" %}">Pedidos</a>
