--- a/aplicacion/templates/aplicacion/perfilusuario.html
+++ b/aplicacion/templates/aplicacion/perfilusuario.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="TiendaOnline.html">Tienda Online</a>
+                        <a class="nav-link active" href="{% url "TiendaOnline" %}">Tienda Online</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
