--- a/aplicacion/templates/aplicacion/Registro.html
+++ b/aplicacion/templates/aplicacion/Registro.html
@@ -5,30 +5,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TheFutbolKey/registro</title>
-  <link rel="stylesheet" href='{% static "aplicacion/css/Registro.css" %}'> 
+  <link rel="stylesheet" href="{% static 'aplicacion/css/Registro.css' %}"> 
 </head>
 <body>
   <div class="container">
     <h2>Registro de Usuario</h2>
-    <form action="{% url 'inicioSesion' %}" method="POST">
+    <form action="{% url 'Registro' %}" method="POST">
       {% csrf_token %}
+  
+      
   
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z ]{2,254}">
   
       <label for="apellido">Apellido:</label>
       <input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z ]{2,254}">
-  
+      
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
-  
+      {% if error %}
+      <div class="error">{{ error }}</div>
+      {% endif %}
+      <br>
       <label for="contrasena">Contraseña:</label>
       <input type="password" id="contrasena" name="contrasena" required>
   
-      <input type="submit" value="Modificar" class="btn btn-warning btn sm">
-      <a href="{% url "inicio" %}" class="btn">Volver</a>
-  </form>
-      
+      <input type="submit" value="Registrarse" class="btn btn-warning btn-sm">
+      <a href="{% url 'inicio' %}" class="btn">Volver</a>
+    </form>
   </div>
 </body>
 </html>
