--- a/aplicacion/templates/aplicacion/TiendaOnline.html
+++ b/aplicacion/templates/aplicacion/TiendaOnline.html
@@ -1,20 +1,20 @@
 {% load static %}
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas de Camisetas de Fútbol</title>
-    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src='{% static "aplicacion/js/jquery-3.7.1.min.js"%}'></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href='{% static "aplicacion/css/estilo.css" %}'> <!-- Corregida la ruta del archivo CSS -->
-    <script src='{% static "aplicacion/js/app.js" %}' async></script> <!-- Corregida la ruta del archivo JavaScript -->
+    <link rel="stylesheet" href="{% static 'aplicacion/css/estilo.css' %}">  Corregida la ruta del archivo CSS -->
+    <!--<script src='{% static "aplicacion/js/app.js" %}' async></script> --> <!-- Corregida la ruta del archivo JavaScript 
     <title>TheKeyFutbol | </title>
 </head>
 
@@ -210,4 +210,160 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+</html>-->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ventas de Camisetas de Fútbol</title>
+    <script src='{% static "aplicacion/js/jquery-3.7.1.min.js"%}'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'aplicacion/css/estilo.css' %}">
+    <script src='{% static "aplicacion/js/app.js" %}' async></script>
+    <title>TheKeyFutbol</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "admin" %}">Admin</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src='{% static "aplicacion/img/usu.png" %}' alt="Perfil" style="width: 30px; height: 30px;">
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-sm" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{% url "perfilusuario" %}">Mi Perfil</a></li>
+                            <li><a class="dropdown-item" href="{% url "mispedidos" %}">Mis Pedidos</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url "inicio" %}">Cerrar Sesión</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <section class="contenedor">
+        <div class="contenedor-items">
+            <!-- Tu contenido de productos aquí -->
+             <div class="item">
+                <span class="titulo-item">Camiseta Colo Colo 2024</span>
+                <img src='{% static "aplicacion/img/coload.webp" %}' alt="" class="img-item">
+                <span class="precio-item">$60.000</span>
+                <div class="form-group">
+                    <label for="talla-colo-colo">Selecciona la talla:</label>
+                    <select class="form-control" id="talla-colo-colo">
+                        <option value="s">S</option>
+                        <option value="m">M</option>
+                        <option value="l">L</option>
+                        <option value="xl">XL</option>
+                    </select>
+                </div>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Camiseta de U de Chiste</span>  
+                <img src='{% static "aplicacion/img/udechiste.jpg" %}' alt="" class="img-item">
+                <span class="precio-item">$10.000</span>
+                <div class="form-group">
+                    <label for="talla-u-chiste">Selecciona la talla:</label>
+                    <select class="form-control" id="talla-u-chiste">
+                        <option value="s">S</option>
+                        <option value="m">M</option>
+                        <option value="l">L</option>
+                        <option value="xl">XL</option>
+                    </select>
+                </div>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+        </div>
+        <div class="carrito" id="carrito">
+            <div class="header-carrito">
+                <h2>Tu Carrito</h2>
+            </div>
+            <div class="carrito-items"></div>
+            <div class="carrito-total">
+                <div class="fila">
+                    <strong>Tu Total</strong>
+                    <span class="carrito-precio-total">$120.000,00</span>
+                </div>
+                <form id="carrito-form" action="{% url 'detalleCompra' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="carrito_data" id="carrito_data">
+                    <button type="submit" class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            let carritoVisible = true; // Declaración y asignación inicial
+        
+            if (document.readyState == 'loading') {
+                document.addEventListener('DOMContentLoaded', ready);
+            } else {
+                ready();
+            }
+        
+            function ready() {
+                let carritoForm = document.getElementById('carrito-form');
+                let btnPagar = document.querySelector('.btn-pagar');
+        
+                btnPagar.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    let carritoItems = document.getElementsByClassName('carrito-item');
+                    let carritoData = [];
+        
+                    for (let i = 0; i < carritoItems.length; i++) {
+                        let item = carritoItems[i];
+                        let titulo = item.getElementsByClassName('carrito-item-titulo')[0].innerText;
+                        let precio = item.getElementsByClassName('carrito-item-precio')[0].innerText;
+                        let cantidad = item.getElementsByClassName('carrito-item-cantidad')[0].value;
+                        carritoData.push({ titulo: titulo, precio: precio, cantidad: cantidad });
+                    }
+        
+                    document.getElementById('carrito_data').value = JSON.stringify(carritoData);
+                    carritoForm.submit();
+                });
+        
+                // Agregar el evento al formulario de carrito
+                carritoForm.addEventListener('submit', function(event) {
+                    event.preventDefault();
+                    let carritoItems = document.getElementsByClassName('carrito-item');
+                    let carritoData = [];
+        
+                    for (let i = 0; i < carritoItems.length; i++) {
+                        let item = carritoItems[i];
+                        let titulo = item.getElementsByClassName('carrito-item-titulo')[0].innerText;
+                        let precio = item.getElementsByClassName('carrito-item-precio')[0].innerText;
+                        let cantidad = item.getElementsByClassName('carrito-item-cantidad')[0].value;
+                        carritoData.push({ titulo: titulo, precio: precio, cantidad: cantidad });
+                    }
+        
+                    document.getElementById('carrito_data').value = JSON.stringify(carritoData);
+                    this.submit(); // Envía el formulario
+                });
+            }
+        });
+        
+    </script>
+</body>
 </html>
+
