--- a/aplicacion/templates/aplicacion/Inicio.html
+++ b/aplicacion/templates/aplicacion/Inicio.html
@@ -14,8 +14,8 @@
     <div class="container">
         <h2>Bienvenido a nuestra página de camisetas de fútbol</h2>
         <p>Por favor, inicia sesión o regístrate para acceder a nuestros servicios.</p>
-        <a href="{% url "inicioSesion" %}" class="btn">Iniciar Sesión</a>
-        <a href="{% url "Registro" %}" class="btn">Registrarse</a>
+        <a href="{% url "login" %}" class="btn">Iniciar Sesión</a>
+        <a href="{% url "crearcuenta" %}" class="btn">Registrarse</a>
     </div>
 
 </body>
