--- a/aplicacion/templates/registration/login.html
+++ b/aplicacion/templates/registration/login.html
@@ -22,7 +22,7 @@
                 {{form | crispy }}
             <div>
                 <input type="submit" value="Iniciar Sesión" class="btn btn-primary">
-                <a href="{% url 'crearcuenta' %}" class="btn btn-primary">registro</a>
+                <a href="{% url 'crearcuenta' %}" class="btn btn-primary">Registro</a>
             </div>
         </form>
     </div>
