--- a/aplicacion/templates/aplicacion/mispedidos.html
+++ b/aplicacion/templates/aplicacion/mispedidos.html
@@ -16,13 +16,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="TiendaOnline.html">Tienda Online</a>
+                        <a class="nav-link active" href="{% url "TiendaOnline" %}">Tienda Online</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="img/usu.png" alt="Perfil" style="width: 30px; height: 30px;">
+                            <img src='{% static "aplicacion/img/usu.png" %}' alt="Perfil" style="width: 30px; height: 30px;">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url "perfilusuario" %}">Mi Perfil</a></li>
