--- a/aplicacion/templates/aplicacion/detalleCompra.html
+++ b/aplicacion/templates/aplicacion/detalleCompra.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -7,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle de Compra</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Font Awesome para los iconos -->
-    <link rel="stylesheet" href="{% static 'aplicacion/css/detalleCompra.css' %}"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'aplicacion/css/detalleCompra.css' %}">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <h1>Detalle de Compra</h1>
-        <p><strong>Código de Pedido:</strong> #123456</p>
-        <table>
+        {% csrf_token %}
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Imagen</th>
@@ -27,31 +28,39 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Las filas se llenarán dinámicamente -->
+                {% for item in carrito_items %}
+                <tr id="item-{{ item.id }}" class="fila-item">
+                    <td><img src="{{ item.producto.imagen.url }}" alt="{{ item.producto.nombre }}" width="50"></td>
+                    <td>{{ item.producto.nombre }}</td>
+                    <td>
+                        <div class="input-group">
+                            <button class="btn btn-outline-secondary restar-cantidad" data-id="{{ item.id }}">-</button>
+                            <input type="number" class="form-control input-cantidad" value="{{ item.cantidad }}" min="1" data-id="{{ item.id }}">
+                            <button class="btn btn-outline-secondary sumar-cantidad" data-id="{{ item.id }}">+</button>
+                        </div>
+                    </td>
+                    <td class="precio-unitario">${{ item.producto.precio }}</td>
+                    <td class="precio-total">${{ item.cantidad|multiply:item.producto.precio }}</td>
+                    <td><button class="btn btn-danger btn-eliminar" data-id="{{ item.id }}">Eliminar</button></td>
+                </tr>
+                {% endfor %}
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="3" style="text-align: right;"><strong>Código de Descuento:</strong></td>
-                    <td colspan="2">
-                        <input type="text" id="discountCode" placeholder="Ingrese código">
-                        <button id="applyDiscountBtn" onclick="applyDiscount()">Aplicar Descuento</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4" style="text-align: right;"><strong>Total:</strong></td>
-                    <td id="totalPrice">$0</td>
+                    <td colspan="4" class="text-end"><strong>Total:</strong></td>
+                    <td class="total-carrito">${{ carrito_items|total_precio }}</td>
                     <td></td>
                 </tr>
             </tfoot>
         </table>
-        <div class="action-buttons">
-            <a href="{% url 'TiendaOnline' %}"><button class="action-button">Volver a la Tienda</button></a>
-            <a href="{% url 'Envio' %}"><button id="comprobarEnvio" class="action-button">Comprobar Envío</button></a>
+        <div class="d-flex justify-content-between">
+            <a href="{% url 'TiendaOnline' %}" class="btn btn-primary">Volver a la Tienda</a>
+            <a href="{% url 'Envio' %}" class="btn btn-success">Comprobar Envío</a>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-    <!-- Font Awesome JS para los iconos -->
+    <script src="{% static 'aplicacion/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'aplicacion/js/detalleCompra.js' %}"></script>
 </body>
 
