--- a/aplicacion/templates/aplicacion/TiendaOnline.html
+++ b/aplicacion/templates/aplicacion/TiendaOnline.html
@@ -95,7 +95,7 @@
                     </span>
                 </div>
                 <a href="{% url 'detalleCompra' %}">
-                    <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
+                    <button class="btn-pagar">Ir al carrito <i class="fa-solid fa-bag-shopping"></i> </button>
                 </a>
             </div>
         </div>
